Bug #10304
sysclass: cast between incompatible function types
Start date:
2019-01-27
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Description
Build error with gcc 8:
../../common/disp/sysclass.c:107:3: error: cast between incompatible function types from 'int (*)()' to 'pri_t (*)()' {aka 'short int (*)()'} [-Werror=cast-function-type] (pri_t (*)())sys_nosys, /* globpri */ ^ cc1: all warnings being treated as errors *** Error code 1
History
Updated by Electric Monk 10 months ago
- % Done changed from 90 to 100
- Status changed from In Progress to Closed
git commit 4f6502b6d39d77ac4bfb06b65b8ef1bb89b010ba
commit 4f6502b6d39d77ac4bfb06b65b8ef1bb89b010ba Author: Toomas Soome <tsoome@me.com> Date: 2019-02-04T16:11:07.000Z 10304 sysclass: cast between incompatible function types Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>